--- a/Hub/Blogs/Internet Art_1_Plan.html
+++ b/Hub/Blogs/Internet Art_1_Plan.html
@@ -37,10 +37,10 @@
         </div>
 
         <ul class="nav-links">
-            <li><a class="GoHome" href="/index.html#Home">Home</a></li>
-            <li><a class="GoAbout" href="/index.html#About">About</a></li>
-            <li><a class="GoBlogs" href="/index.html#Blogs">Blogs</a></li>
-            <li><a class="GoArt" href="/index.html#Art">Art</a></li>
+            <li><a class="GoHome" href="./index.html#Home">Home</a></li>
+            <li><a class="GoAbout" href="./index.html#About">About</a></li>
+            <li><a class="GoBlogs" href="./index.html#Blogs">Blogs</a></li>
+            <li><a class="GoArt" href="./index.html#Art">Art</a></li>
 
 
         </ul>
@@ -52,7 +52,7 @@
 
 
                 <button class="viewbtn">
-                    <a href="/index.html#Blogs">
+                    <a href="./index.html#Blogs">
                         Back
                     </a>
 
