--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
             <div class="blog-cards">
 
-                <a class="blog-cards-link" href="/Hub/Blogs/Article_2_Site_Making.html">
+                <a class="blog-cards-link" href="./Hub/Blogs/Article_2_Site_Making.html">
                     <article class="card">
                         <figure class="card-image-2"></figure>
                         <blockquote class="card-text">
@@ -70,7 +70,7 @@
                         </blockquote>
                     </article>
                 </a>
-                <a class="blog-cards-link" href="/Hub/Blogs/Internet Art_1_Plan.html">
+                <a class="blog-cards-link" href="./Hub/Blogs/Internet Art_1_Plan.html">
                     <article class="card">
                         <figure class="card-image-4"></figure>
                         <blockquote class="card-text">
@@ -86,7 +86,7 @@
                     </article>
                 </a>
 
-                <a class="blog-cards-link" href="/Hub/Blogs/Article_3_Internet_Art_Review.html">
+                <a class="blog-cards-link" href="./Hub/Blogs/Article_3_Internet_Art_Review.html">
                     <article class="card">
                         <figure class="card-image-3"></figure>
                         <blockquote class="card-text">
@@ -151,7 +151,7 @@
                     </p>
 
                     <button class="viewbtn" href="#">
-                        <a href="/Hub/Blogs/About.html">
+                        <a href="./Hub/Blogs/About.html">
                             View More
                         </a>
                     </button>
@@ -167,7 +167,7 @@
 
             <div class="blog-cards">
 
-                <a class="blog-cards-link" href="/Hub/Blogs/Article_2_Site_Making.html">
+                <a class="blog-cards-link" href="./Hub/Blogs/Article_2_Site_Making.html">
                     <article class="card">
                         <figure class="card-image-2"></figure>
                         <blockquote class="card-text">
@@ -183,7 +183,7 @@
                     </article>
                 </a>
 
-                <a class="blog-cards-link" href="/Hub/Blogs/Article_3_Internet_Art_Review.html">
+                <a class="blog-cards-link" href="./Hub/Blogs/Article_3_Internet_Art_Review.html">
                     <article class="card">
                         <figure class="card-image-3"></figure>
                         <blockquote class="card-text">
@@ -221,7 +221,7 @@
             </div>
 
             <div class="quiver">
-                <a class="arrows" href="./index.html#GetHere2">
+                <a class="arrows" href="index.html#GetHere2">
                     <div></div>
                     <div id="GetHere2"></div>
                 </a>
@@ -235,7 +235,7 @@
 
             <div class="blog-cards">
 
-                <a class="blog-cards-link" href="/Hub/Blogs/Internet Art_1_Plan.html">
+                <a class="blog-cards-link" href="./Hub/Blogs/Internet Art_1_Plan.html">
                     <article class="card">
                         <figure class="card-image-4"></figure>
                         <blockquote class="card-text">
