--- a/Hub/Blogs/About.html
+++ b/Hub/Blogs/About.html
@@ -37,10 +37,10 @@
         </div>
 
         <ul class="nav-links">
-            <li><a class="GoHome" href="./index.html#Home">Home</a></li>
-            <li><a class="GoAbout" href="./index.html#About">About</a></li>
-            <li><a class="GoBlogs" href="./index.html#Blogs">Blogs</a></li>
-            <li><a class="GoArt" href="./index.html#Art">Art</a></li>
+            <li><a class="GoHome" href="../../index.html#Home">Home</a></li>
+            <li><a class="GoAbout" href="../../index.html#About">About</a></li>
+            <li><a class="GoBlogs" href="../../index.html#Blogs">Blogs</a></li>
+            <li><a class="GoArt" href="../../index.html#Art">Art</a></li>
 
 
         </ul>
@@ -53,7 +53,7 @@
                     About 1827518.
                 </p>
                 <button class="viewbtn">
-                    <a href="/index.html#Home">
+                    <a href="../../index.html#Home">
                         Back
                     </a>
 
