--- a/Hub/Blogs/About.html
+++ b/Hub/Blogs/About.html
@@ -37,12 +37,10 @@
         </div>
 
         <ul class="nav-links">
-            <li><a class="GoHome" href="../../index.html#Home">Home</a></li>
-            <li><a class="GoAbout" href="../../index.html#About">About</a></li>
-            <li><a class="GoBlogs" href="../../index.html#Blogs">Blogs</a></li>
-            <li><a class="GoArt" href="../../index.html#Art">Art</a></li>
-
-
+            <li><a class="GoHome" href="https://inrahus.github.io/WSOA4175A_1827518/index.html#Home">Home</a></li>
+            <li><a class="GoAbout" href="https://inrahus.github.io/WSOA4175A_1827518/index.html#About">About</a></li>
+            <li><a class="GoBlogs" href="https://inrahus.github.io/WSOA4175A_1827518/index.html#Blogs">Blogs</a></li>
+            <li><a class="GoArt" href="https://inrahus.github.io/WSOA4175A_1827518/index.htmll#Art">Art</a></li>
         </ul>
     </nav>
 
@@ -53,7 +51,7 @@
                     About 1827518.
                 </p>
                 <button class="viewbtn">
-                    <a href="../../index.html#Home">
+                    <a href="https://inrahus.github.io/WSOA4175A_1827518/index.html#GetHere">
                         Back
                     </a>
 
