--- a/Hub/Blogs/Article_3_Internet_Art_Review.html
+++ b/Hub/Blogs/Article_3_Internet_Art_Review.html
@@ -37,12 +37,10 @@
         </div>
 
         <ul class="nav-links">
-            <li><a class="GoHome" href="/index.html#Home">Home</a></li>
-            <li><a class="GoAbout" href="/index.html#About">About</a></li>
-            <li><a class="GoBlogs" href="/index.html#Blogs">Blogs</a></li>
-            <li><a class="GoArt" href="/index.html#Art">Art</a></li>
-
-
+            <li><a class="GoHome" href="https://inrahus.github.io/WSOA4175A_1827518/index.html#Home">Home</a></li>
+            <li><a class="GoAbout" href="https://inrahus.github.io/WSOA4175A_1827518/index.html#About">About</a></li>
+            <li><a class="GoBlogs" href="https://inrahus.github.io/WSOA4175A_1827518/index.html#Blogs">Blogs</a></li>
+            <li><a class="GoArt" href="https://inrahus.github.io/WSOA4175A_1827518/index.htmll#Art">Art</a></li>
         </ul>
     </nav>
 
@@ -156,7 +154,7 @@
                     http://archive.rhizome.org/anthology/blacknetart/ebay.html
                 </p>
                 <button class="viewbtn">
-                    <a href="/index.html#Blogs">
+                    <a href="../../index.html#Blogs">
                         Back
                     </a>
 
