--- a/Hub/Blogs/Article_1_Tackling_Decoloniality.html
+++ b/Hub/Blogs/Article_1_Tackling_Decoloniality.html
@@ -40,7 +40,7 @@
             <li><a class="GoHome" href="https://inrahus.github.io/WSOA4175A_1827518/index.html#Home">Home</a></li>
             <li><a class="GoAbout" href="https://inrahus.github.io/WSOA4175A_1827518/index.html#About">About</a></li>
             <li><a class="GoBlogs" href="https://inrahus.github.io/WSOA4175A_1827518/index.html#Blogs">Blogs</a></li>
-            <li><a class="GoArt" href="https://inrahus.github.io/WSOA4175A_1827518/index.htmll#Art">Art</a></li>
+            <li><a class="GoArt" href="https://inrahus.github.io/WSOA4175A_1827518/index.html#Art">Art</a></li>
         </ul>
     </nav>
 
