--- a/Hub/Blogs/Article_2_Site_Making.html
+++ b/Hub/Blogs/Article_2_Site_Making.html
@@ -40,7 +40,7 @@
             <li><a class="GoHome" href="https://inrahus.github.io/WSOA4175A_1827518/index.html#Home">Home</a></li>
             <li><a class="GoAbout" href="https://inrahus.github.io/WSOA4175A_1827518/index.html#About">About</a></li>
             <li><a class="GoBlogs" href="https://inrahus.github.io/WSOA4175A_1827518/index.html#Blogs">Blogs</a></li>
-            <li><a class="GoArt" href="https://inrahus.github.io/WSOA4175A_1827518/index.htmll#Art">Art</a></li>
+            <li><a class="GoArt" href="https://inrahus.github.io/WSOA4175A_1827518/index.html#Art">Art</a></li>
         </ul>
     </nav>
 
@@ -116,7 +116,7 @@
                     https://inrahus.github.io/WSOA3029A_1827518/Hub/About/About.html
                 </p>
                 <button class="viewbtn">
-                    <a href="../../index.html#Blogs">
+                    <a href="https://inrahus.github.io/WSOA4175A_1827518/index.html#Blogs">
                         Back
                     </a>
 
