--- a/Hub/Blogs/Internet Art_1_Plan.html
+++ b/Hub/Blogs/Internet Art_1_Plan.html
@@ -50,7 +50,7 @@
 
 
                 <button class="viewbtn">
-                    <a href="https://inrahus.github.io/WSOA4175A_1827518/index.html#Blogs">
+                    <a href="https://inrahus.github.io/WSOA4175A_1827518/index.html#Art">
                         Back
                     </a>
 
