--- a/Hub/Blogs/Article_2_Site_Making.html
+++ b/Hub/Blogs/Article_2_Site_Making.html
@@ -62,7 +62,7 @@
                 <p>
                     For my goal, I would like it if everything could be done on one page – however, I will initially try
                     to cut down on excessive intermediaries – like a separate blog collections page or arts collections
-                    page – and make it all accessible from the home scree. The code I used in my vis.co site (Pillay,
+                    page – and make it all accessible from the home screen. The code I used in my vis.co site (Pillay,
                     vis.co - Website Design, 2020), to section the homepage, allows for this, but I did not make such
                     good use of it, and would like to attempt it this time around.
                 </p>
@@ -78,7 +78,7 @@
                     hope to before the submission.
                 </p>
                 <p>
-                    Another issue I am currently facing is with my full page Nav bar – where the animation displays
+                    Another issue I am currently facing is with my full page Nav Bar – where the animation displays
                     below the whole bar, but not under each link – but when I test the responsivity on mobile view, it
                     works and when I revert to the full screen, it also suddenly works. I believe I will need to apply
                     the animation to each link individually for this to be fixed but will do so at a later stage.
@@ -97,6 +97,11 @@
                     additional work to support my points – as opposed to my previous work, which was more comparable to
                     literature reviews. I also want to fucus on referencing more correctly and really recognizing where
                     different works have influenced my positions.
+                </p>
+                <p>
+                    With regards to the use of
+                    React.JS - I have yet to make use of this and have, for the time begin, stuck majorly to html and
+                    css for my layout and design, with a slight use of JS for the responsivity of my site.
                 </p>
                 <p>
                     With each submission, I plan to update this document, as a more reflective piece, compared to the
