--- a/Hub/Blogs/Internet Art_1_Plan.html
+++ b/Hub/Blogs/Internet Art_1_Plan.html
@@ -17,7 +17,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <title>Tackling Decoloniality</title>
+    <title>Internet Art Proposal</title>
 </head>
 
 <body>
@@ -47,7 +47,56 @@
     <main>
         <div class="blog-space">
             <div class="blog-text">
-
+                <p>
+                    Internet Art Proposal
+                </p>
+                <p>
+                    For my idea this semester, I would like to do something more in line with the works of Mendi Obadike
+                    and Miao Ying, and create a piece that is more internet adjacent, than directly formed on the
+                    workings of the web itself. Ideally, a piece that can function without the web, but that is enhanced
+                    using the web and the interactivity it provides – as in the case of Obadike’s work (Obadike M. L.,
+                    2001). However, I also feel like a piece, such as Blind Spot (Ying , 2007), that works in its
+                    physicality, influenced by the Web is also something interesting to achieve.
+                </p>
+                <p>
+                    With both works, I really enjoyed the use and spin on words, and examining the way that words work
+                    and affect our understanding and how the lack thereof can also limit our understanding.
+                </p>
+                <p>
+                    Therefore, I would like to attempt something that is both physical and digital.
+                </p>
+                <p>
+                    For my project I would like to examine the lens of masculinity and use the features from Obadike’s
+                    work to comment on the gender binaries that affect the idea of masculinity in the social lens.
+                </p>
+                <p>
+                    I would like to show an image of a predominately neutral or common scene from life – such as a
+                    storefront with mannequins or maybe a directory of store names or accessible services and based on
+                    whether the interactor picks to be male or female, it will display only what seems to be societally
+                    acceptable for them to view, approach or consider, but I want this to show a great focus on what is
+                    viewed as unacceptable for men or masculine identifying bodies.
+                </p>
+                <p>
+                    I was very stuck in developing an idea for this project, and I don’t have a lot to offer in terms of
+                    the development or planning. However, I would like to pursue this idea more deeply and by the next
+                    submission, I would like to have a fully functional prototype that focuses on one scene/place, and
+                    that highlights the particular present binaries in that scene.
+                </p>
+                <p>
+                    In terms of having this be both digital and physical I would like to see if I can directly achieve
+                    the scene of the piece through photography of a place here – which would also contextualize the
+                    project into the South African context.
+                </p>
+                <h2>
+                    References
+                </h2>
+                <p>
+                    Obadike, M. L. (2001). keeping up appearances. Retrieved from Rhizome:
+                    https://webenact.rhizome.org/keeping-up-appearances/20151029152713/http://blacknetart.com/keepingupappearances.html
+                    <br>
+                    Ying , M. (2007). Blind Spot. Retrieved from Net Art Anthology, Rhizome:
+                    https://anthology.rhizome.org/blind-spot
+                </p>
 
                 <button class="viewbtn">
                     <a href="https://inrahus.github.io/WSOA4175A_1827518/index.html#Art">
