--- a/Hub/Blogs/Internet Art_1_Plan.html
+++ b/Hub/Blogs/Internet Art_1_Plan.html
@@ -66,7 +66,8 @@
                     Therefore, I would like to attempt something that is both physical and digital.
                 </p>
                 <p>
-                    For my project I would like to examine the lens of masculinity and use the features from Obadike’s
+                    For my project I would like to examine the lens of masculinity and use the revealing hover features
+                    from Obadike’s
                     work to comment on the gender binaries that affect the idea of masculinity in the social lens.
                 </p>
                 <p>
@@ -80,7 +81,8 @@
                     I was very stuck in developing an idea for this project, and I don’t have a lot to offer in terms of
                     the development or planning. However, I would like to pursue this idea more deeply and by the next
                     submission, I would like to have a fully functional prototype that focuses on one scene/place, and
-                    that highlights the particular present binaries in that scene.
+                    that highlights the particular present binaries in that scene. By the end of the course, I would
+                    like to present this as a series of three scenes.
                 </p>
                 <p>
                     In terms of having this be both digital and physical I would like to see if I can directly achieve
