--- a/Hub/Blogs/About.html
+++ b/Hub/Blogs/About.html
@@ -50,6 +50,80 @@
                 <p>
                     About 1827518.
                 </p>
+                <p>
+                    For this assignment, I believe I did adequately. I was able to approach the project quite well from
+                    a theoretical and technical standpoint but did lack a lot in terms of the long-term art project.
+                    Moving forward, I think that I could focus more on the development of my Internet Art and start
+                    implementing the use of React.JS, as well as really showcasing more of my theoretical focus and
+                    develop my overarching theme of decoloniality and start exploring more of what this means in terms
+                    of code, development, and the tech industry.
+                </p>
+                <h2>
+                    Technical
+                </h2>
+                <p>
+                    In terms of the technical work of my site, I believe I was able to adequately meet the brief.I do
+                    believe that in terms of my Homepage contextualizing the project, I could do something more
+                    versatile in my Home section, that directly relates to or maybe even is the Internet Art PIECE WHEN
+                    I DEVELOP IT. However, at this stage, I think it works fine enough to show my work chronologically,
+                    and to cover all the necessary components.
+                </p>
+                <p>
+                    In terms of the separate Blog and Internet Art pages, I have instead sectioned them on the homepage
+                    to focus on my personal goal of a “one page” site. Outside of the separate blog pages – which I
+                    eventually hope to show as pop-ups if possible – the only page I feel might really get a separate
+                    page, is the Internet Art Project itself. Currently, I have not started with the development of it
+                    but, I have started a section and a blog that details my plans for moving forward.
+                </p>
+                <p>
+                    I have made use of good semantic markup, metadata – although I believe I should vary it more per
+                    page – and my site is responsive, except for some few elements, namely my navigation arrows on my
+                    homepage. I have also used CSS quite heavily to arrange and finesse my site and used minimal JS to
+                    create a more seamless responsive design.
+                </p>
+                <h2>
+                    Theoretical
+                </h2>
+                <p>
+                    I have included all the necessary blog posts topics but have decided to merge the technical and
+                    artistic reflections into one living document that will be updated with each assignment. It details
+                    all the decisions made and will elaborate more reflectively on the work done on the site.
+                </p>
+                <p>
+                    For my close reading and analysis, I am quite happy with my work, as I have finally started to
+                    correctly reference my ideas and really involve myself with more than just the provided texts.
+                    Moving forward, I would definitely like to produce more work and really make the theoretical
+                    aspect/approach to my work more dominate in this project, outside of the main Internet Art
+                    component.
+                </p>
+                <p>
+                    Overall, I currently believe this work is my strongest of the three marking sections
+                </p>
+                <h2>
+                    Creative Practice
+                </h2>
+                <p>
+                    I do think my website has good UI practices – but they can still be improved, especially in terms of
+                    accessibility. I think the aesthetic works well, but as compared to previous site developments, I
+                    was not as considerate in my design, and want to address this moving forward. I believe there might
+                    be some small aesthetic changes - sizing, and the like, taken into consideration by the next
+                    submission.
+                </p>
+                <p>
+                    I do think my website’s content is coherent and really showcases my focus on decoloniality.
+                    Retrospectively, I now see the brief I have set out for my project may seem a bit detached in its
+                    feminism focus lens, as compared to my analysis and readings which are more toward the
+                    racial-decolonial direction.
+                </p>
+                <p>
+                    I do not think it is a train smash, and I think the idea I am proposing could still be used in that
+                    direction, with some considerations and a different focus. For my internet art, I have only recently
+                    really begun to develop my idea, but have not yet made any progress on it’s development nor have I
+                    really made space to see how it would resonate with my site’s aesthetic – but, noting what I
+                    mentioned previously, I believe I will be making some changes to the focus of the project, and shift
+                    from a gender based approach, to a more racial one that correlates more with my focus of my
+                    theoretical direction.
+                </p>
                 <button class="viewbtn">
                     <a href="https://inrahus.github.io/WSOA4175A_1827518/index.html#GetHere">
                         Back
