--- a/Hub/Blogs/About.html
+++ b/Hub/Blogs/About.html
@@ -38,7 +38,7 @@
 
         <ul class="nav-links">
             <li><a class="GoHome" href="https://inrahus.github.io/WSOA4175A_1827518/index.html#Home">Home</a></li>
-            <li><a class="GoAbout" href="https://inrahus.github.io/WSOA4175A_1827518/index.html#About">About</a></li>
+            <li><a class="GoAbout" href="https://inrahus.github.io/WSOA4175A_1827518/index.html#GetHere">About</a></li>
             <li><a class="GoBlogs" href="https://inrahus.github.io/WSOA4175A_1827518/index.html#Blogs">Blogs</a></li>
             <li><a class="GoArt" href="https://inrahus.github.io/WSOA4175A_1827518/index.htmll#Art">Art</a></li>
         </ul>
@@ -50,6 +50,13 @@
                 <p>
                     About 1827518.
                 </p>
+
+                <button class="viewbtn" href="#">
+                    <a href="#Pt2">
+                        See Updated
+                    </a>
+                </button>
+                <br>
                 <p>
                     For this assignment, I believe I did adequately. I was able to approach the project quite well from
                     a theoretical and technical standpoint but did lack a lot in terms of the long-term art project.
@@ -124,6 +131,15 @@
                     from a gender based approach, to a more racial one that correlates more with my focus of my
                     theoretical direction.
                 </p>
+
+                <br>
+                <br>
+                <br>
+
+                <h2 id="Pt2">
+                    Update (Assignment 2)
+                </h2>
+
                 <button class="viewbtn">
                     <a href="https://inrahus.github.io/WSOA4175A_1827518/index.html#GetHere">
                         Back
