--- a/Hub/Blogs/Internet Art_1_Plan.html
+++ b/Hub/Blogs/Internet Art_1_Plan.html
@@ -39,7 +39,7 @@
         <ul class="nav-links">
             <li><a class="GoHome" href="https://inrahus.github.io/WSOA4175A_1827518/index.html#Home">Home</a></li>
             <li><a class="GoAbout" href="https://inrahus.github.io/WSOA4175A_1827518/index.html#About">About</a></li>
-            <li><a class="GoBlogs" href="https://inrahus.github.io/WSOA4175A_1827518/index.html#Blogs">Blogs</a></li>
+            <li><a class="GoBlogs" href="https://inrahus.github.io/WSOA4175A_1827518/index.html#GetHere">Blogs</a></li>
             <li><a class="GoArt" href="https://inrahus.github.io/WSOA4175A_1827518/index.html#Art">Art</a></li>
         </ul>
     </nav>
@@ -50,6 +50,13 @@
                 <p>
                     Internet Art Proposal
                 </p>
+
+                <button class="viewbtn" href="#">
+                    <a href="#Pt2">
+                        See Updated
+                    </a>
+                </button>
+                <br>
                 <p>
                     For my idea this semester, I would like to do something more in line with the works of Mendi Obadike
                     and Miao Ying, and create a piece that is more internet adjacent, than directly formed on the
@@ -99,6 +106,13 @@
                     Ying , M. (2007). Blind Spot. Retrieved from Net Art Anthology, Rhizome:
                     https://anthology.rhizome.org/blind-spot
                 </p>
+                <br>
+                <br>
+                <br>
+
+                <h2 id="Pt2">
+                    Updated (Assignment 2)
+                </h2>
 
                 <button class="viewbtn">
                     <a href="https://inrahus.github.io/WSOA4175A_1827518/index.html#Art">
