--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <ul class="nav-links">
             <li><a class="GoHome" href="#Home">Home</a></li>
-            <li><a class="GoAbout" href="#About">About</a></li>
+            <li><a class="GoAbout" href="./index.html#GetHere">About</a></li>
             <li><a class="GoBlogs" href="#Blogs">Blogs</a></li>
             <li><a class="GoArt" href="#Art">Art</a></li>
 
@@ -70,23 +70,41 @@
                         </blockquote>
                     </article>
                 </a>
+
                 <a class="blog-cards-link" href="./Hub/Blogs/Internet Art_1_Plan.html">
                     <article class="card">
                         <figure class="card-image-4"></figure>
                         <blockquote class="card-text">
-                            <time>20210927</time>
+                            <time>20211101</time>
 
                             <h3>
-                                Internet Art Idea
+                                Internet Art Idea (Updated)
                             </h3>
                             <p>
-                                Idea for Internet Art Project
+                                Internet Art Project
                             </p>
                         </blockquote>
                     </article>
                 </a>
 
-                <a class="blog-cards-link" href="./Hub/Blogs/Article_3_Internet_Art_Review.html">
+
+                <a class="blog-cards-link" href="./Hub/Blogs/Article_5.html">
+                    <article class="card">
+                        <figure class="card-image-1"></figure>
+                        <blockquote class="card-text">
+                            <time>20210915</time>
+
+                            <h3>
+
+                            </h3>
+                            <p>
+                                A close reading of .
+                            </p>
+                        </blockquote>
+                    </article>
+                </a>
+
+                <a class="blog-cards-link" href="./Hub/Blogs/Article_4_Internet_Art_Review_2.html">
                     <article class="card">
                         <figure class="card-image-3"></figure>
                         <blockquote class="card-text">
@@ -96,32 +114,12 @@
                                 Internet Art Analysis
                             </h3>
                             <p>
-                                Analysis of 'Blackness for Sale' by Kieth Odibake
+                                Analysis of '' by
                             </p>
                         </blockquote>
                     </article>
                 </a>
-
-
-
-                <a class="blog-cards-link" href="./Hub/Blogs/Article_1_Tackling_Decoloniality.html">
-                    <article class="card">
-                        <figure class="card-image-1"></figure>
-                        <blockquote class="card-text">
-                            <time>20210915</time>
-
-                            <h3>
-                                Tackling Decoloniality
-                            </h3>
-                            <p>
-                                A close reading of Mignolo & Walsh (2018) and Mbembe (2015).
-                            </p>
-                        </blockquote>
-                    </article>
-                </a>
-
             </div>
-
             <div class="quiver">
                 <a class="arrows" href="./index.html#GetHere">
                     <div></div>
@@ -131,8 +129,6 @@
 
 
         </section>
-
-
 
         <section id="About" class="About">
             <center>
@@ -159,6 +155,8 @@
             </center>
 
         </section>
+
+
         <section id="Blogs" class="Blogs">
 
             <h2>
@@ -183,6 +181,55 @@
                     </article>
                 </a>
 
+                <a class="blog-cards-link" href="./Hub/Blogs/Internet Art_1_Plan.html">
+                    <article class="card">
+                        <figure class="card-image-4"></figure>
+                        <blockquote class="card-text">
+                            <time>20211101</time>
+
+                            <h3>
+                                Internet Art Idea (Updated)
+                            </h3>
+                            <p>
+                                Internet Art Project
+                            </p>
+                        </blockquote>
+                    </article>
+                </a>
+
+                <a class="blog-cards-link" href="./Hub/Blogs/Article_5.html">
+                    <article class="card">
+                        <figure class="card-image-1"></figure>
+                        <blockquote class="card-text">
+                            <time>20210915</time>
+
+                            <h3>
+
+                            </h3>
+                            <p>
+                                A close reading of .
+                            </p>
+                        </blockquote>
+                    </article>
+                </a>
+
+                <a class="blog-cards-link" href="./Hub/Blogs/Article_4_Internet_Art_Review_2.html">
+                    <article class="card">
+                        <figure class="card-image-3"></figure>
+                        <blockquote class="card-text">
+                            <time>20210923</time>
+
+                            <h3>
+                                Internet Art Analysis
+                            </h3>
+                            <p>
+                                Analysis of '' by
+                            </p>
+                        </blockquote>
+                    </article>
+                </a>
+
+
                 <a class="blog-cards-link" href="./Hub/Blogs/Article_3_Internet_Art_Review.html">
                     <article class="card">
                         <figure class="card-image-3"></figure>
@@ -199,8 +246,6 @@
                     </article>
                 </a>
 
-
-
                 <a class="blog-cards-link" href="./Hub/Blogs/Article_1_Tackling_Decoloniality.html">
                     <article class="card">
                         <figure class="card-image-1"></figure>
@@ -216,8 +261,6 @@
                         </blockquote>
                     </article>
                 </a>
-
-
             </div>
 
             <div class="quiver">
@@ -233,25 +276,6 @@
                 Art
             </h2>
 
-            <div class="blog-cards">
-
-                <a class="blog-cards-link" href="./Hub/Blogs/Internet Art_1_Plan.html">
-                    <article class="card">
-                        <figure class="card-image-4"></figure>
-                        <blockquote class="card-text">
-                            <time>20210927</time>
-
-                            <h3>
-                                Internet Art Idea
-                            </h3>
-                            <p>
-                                Idea for Internet Art Project
-                            </p>
-                        </blockquote>
-                    </article>
-                </a>
-
-            </div>
         </section>
 
     </main>
