--- a/Hub/Blogs/Article_3_Internet_Art_Review.html
+++ b/Hub/Blogs/Article_3_Internet_Art_Review.html
@@ -88,7 +88,7 @@
                 </p>
                 <p>
                     Blackness is no longer being defined by its lack of presence in the difference spheres of technology
-                    and digital society (Brock, 2020). But it’s presence as a commodity has become more prevalence than
+                    and digital society (Brock, 2020). But it’s presence as a commodity has become more prevalent than
                     ever, especially with the rise of social media app, TikTok. In recent years of fame, the app has
                     become infamous for its suppressive community-based algorithm, that uplifts the commodified use of
                     blackness used by the white community for financial and fame gain, while simultaneously not giving
