--- a/index.html
+++ b/index.html
@@ -165,49 +165,17 @@
 
             <div class="blog-cards">
 
-                <a class="blog-cards-link" href="./Hub/Blogs/Article_2_Site_Making.html">
-                    <article class="card">
-                        <figure class="card-image-2"></figure>
-                        <blockquote class="card-text">
-                            <time>ONGOING</time>
-
-                            <h3>
-                                Site Making
-                            </h3>
-                            <p>
-                                Document detailing the creative process and vision for the site.
-                            </p>
-                        </blockquote>
-                    </article>
-                </a>
-
-                <a class="blog-cards-link" href="./Hub/Blogs/Internet Art_1_Plan.html">
-                    <article class="card">
-                        <figure class="card-image-4"></figure>
-                        <blockquote class="card-text">
-                            <time>20211101</time>
-
-                            <h3>
-                                Internet Art Idea (Updated)
-                            </h3>
-                            <p>
-                                Internet Art Project
-                            </p>
-                        </blockquote>
-                    </article>
-                </a>
-
-                <a class="blog-cards-link" href="./Hub/Blogs/Article_5.html">
+                <a class="blog-cards-link" href="./Hub/Blogs/Article_5_Digital_Divide.html">
                     <article class="card">
                         <figure class="card-image-1"></figure>
                         <blockquote class="card-text">
                             <time>20210915</time>
 
                             <h3>
-
+                                The Digital Divide
                             </h3>
                             <p>
-                                A close reading of .
+                                A close reading of Daniolou (2020), and Tataki & Glynos (2020).
                             </p>
                         </blockquote>
                     </article>
